--- a/Report/report.tex
+++ b/Report/report.tex
@@ -5,7 +5,7 @@
 \usepackage{hyperref}
 \usepackage{times}
 %opening
-\title{\textbf{\textit{\underline{¿Inundación o sequía?}}}}
+\title{\textbf{\textit{\underline{¿Inundación o Sequía?}}}}
 
 \begin{document}
 	
@@ -22,7 +22,7 @@
 	Facultad de Matemática y Computación\\}
 	\vspace{3.5cm}
 	
-	{\rmfamily\selectfont\Huge{¿Inundaciones o sequía?}} 
+	{\rmfamily\selectfont\Huge{Adentrémonos en el mundo de la sequía.}} 
 	\vspace{1.5cm}
 	
 	\Large
@@ -40,170 +40,109 @@
 
 	
 	\begin{center}
-		\textbf{\textit{\underline{{\fontsize{60}{24}\selectfont Huracán Ian:}}}}
+		\textbf{\textit{\underline{{\fontsize{60}{24}\selectfont ¿Sequía?:}}}}
 	\end{center}
 	
 	
+	Imagina un mundo donde la tierra se agrieta bajo el sol implacable, donde los ríos se convierten en hilos de agua apenas perceptibles, y donde la sed se convierte en una compañera constante. Este es el mundo de la sequía, un fenómeno que va más allá de la simple escasez de agua, para sumergir a comunidades enteras en una lucha desesperada por la supervivencia.
+    \par\vspace{4mm}
 	\begin{figure}[H]
 		\centering
-		\includegraphics[width=0.7\linewidth]{./Report/images/Ian}
+		\includegraphics[width=0.7\linewidth]{./images/4.png}
 		\label{fig:ian}
 	\end{figure}
+	\par\vspace{4mm}
+	Las sequías son periodos prolongados de tiempo seco causados por la falta de lluvia, lo que produce escasez de agua. Este fenómeno desencadena una serie de impactos devastadores en la vida de las personas y en los ecosistemas. La sequía afecta a todas las regiones del planeta, en menor o mayor medida, y es una consecuencia del cambio climático, lo que hace que este fenómeno nos visite cada vez más seguido y por más tiempo y por supuesto, nuestra paradisíaca isla de Cuba no es ajena a sus efectos.
 	
+	\section{Causas de las sequías}
+	Algunas de las principales causas de las sequías son :
+    \begin{itemize}
+		\item Cambio climático: El calentamiento global debido a la acumulación de gases de efecto invernadero en la atmósfera está alterando los patrones climáticos y aumentando la frecuencia e intensidad de eventos climáticos extremos, incluidas las sequías y el derretimiento de glaciares, por mencionar solo algunos de sus efectos.
+
+		\item Deficiencias en las precipitaciones: La falta de lluvias o nevadas suficientes durante la temporada de crecimiento puede llevar a una sequía en la región afectada.
+
+		\item Agotamiento de fuentes de agua: El uso excesivo de recursos hídricos, como aguas subterráneas y ríos, para el riego agrícola, puede llevar al agotamiento de las fuentes de agua locales y a la sequía.
+
+		\item Deforestación: Aunque no se vea la relación a simple vista, la tala masiva de bosques reduce la capacidad de retención de agua del suelo y afecta el ciclo hidrológico, lo que puede contribuir a la sequía. Esto es particularmente relevante en América del Sur, donde se siente cada vez más la reducción del Amazonas, principal reserva de bosques del mundo.
+
+		\item Prácticas agrícolas inadecuadas: El uso ineficiente del agua en la agricultura, como el riego inadecuado o la falta de técnicas de conservación de agua, puede aumentar la vulnerabilidad de una región a la sequía. Al día de hoy, las nuevas tecnologías y métodos distintos de riego promueven un uso más racional del agua.
+
+		\item Urbanización y crecimiento de la población: El aumento de la población y la expansión urbana pueden aumentar la demanda de agua, presionando aún más los recursos hídricos disponibles para la agricultura. Al mismo tiempo, la contaminación de fuentes de agua puede afectar su calidad y disponibilidad para el riego y el consumo humano.
+
+		\item Sobrepastoreo y degradación del suelo: Prácticas agrícolas y ganaderas mal gestionadas pueden dañar el suelo y reducir su capacidad para retener agua, lo que puede agravar la sequía.
+	\end{itemize}
 	
-	A las 4:40 de la madrugada del día 27 de septiembre del 2022, tocaba tierras cubanas por la provincia de Pinar del Río, un intenso huracán de nombre Ian, con vientos máximos sostenidos de 205 km/h, y de categoría "3" según la escala Saffir-Simpson. Durante la mañana de este mismo día, ocurrieron en dicha provincia vientos fuertes en racha y numerosas lluvias, así como inundaciones costeras hacia la costa sur. A las 9:50 am, Ian emergió al sudeste del Golfo de México, quedando aún en algunos pueblos, vientos sostenidos de 185 km/h. Ya en la tarde, había dejado totalmente la Isla, adentrándose cada vez más en aguas del golfo. En tan solo 7 horas, el huracán provocó graves daños en las redes principales y secundarias de suministro de agua, y en sistemas de abastecimiento de varios municipios, también ocasionó derrumbes parciales y totales en miles de viviendas, afectaciones a las coberturas e infraestructura de instituciones públicas y conjuntamente al suministro de electricidad en el país, además, generó caída de árboles, inundaciones en zonas bajas y cuantiosos daños en la agricultura.\cite{webpage1}
-	
-	
-	\begin{figure}[H]
+	\section{Sequía en Cuba}
+    \begin{figure}
 		\centering
-		\includegraphics[width=0.6\linewidth]{./Report/images/huracán_Ian}
-		\caption{Huracán Ian.}
-		\label{fig:huracanian}
+		\includegraphics[width=0.7\linewidth]{images/9.jpg}
 	\end{figure}
-	
-	Una vez que el huracán Ian dejó de ser una amenaza, se pudo constatar la magnitud de los daños y determinar las provincias que sufrieron mayor impacto, siendo Pinar del Río, Artemisa, Mayabeque y La Habana las más afectadas. Con la excepción de Mayabeque, todas estas localidades experimentaron precipitaciones por encima de la media, no obstante, esto no cambia el hecho de que el resto del país estuviera en medio de una extensa desecación, y por si fuera poco, a pesar de que en el mes de octubre las copiosas inundaciones y precipitaciones ocasionadas por el huracán fueron prominentes, las áreas mencionadas con anterioridad experimentaron una severa sequía, evidenciando la dualidad de la naturaleza y su impacto en nuestras vidas.\cite{webpage2}
-	
-	
-	
-	\begin{figure}[H]
-		\centering
-		\includegraphics[width=0.8\linewidth]{./Report/images/mapa_octubre_ismet}
-		\caption{Mapa de Cuba con las provincias más afectadas en el mes de octubre.}
-		\label{fig:mapaoctubreismet}
-	\end{figure}
-	
-	\begin{figure}[H]
-		\centering
-		\includegraphics[width=0.7\linewidth]{./Report/images/provincias_más_afectadas}
-		\caption{Comportamiento de las precipitaciones en las provincias más afectadas.}
-		\label{fig:provinciasmasafectadas}
-	\end{figure}
-	
-	
-	
-	\begin{figure}[H]
-		\centering
-		\includegraphics[width=0.8\linewidth]{./Report/images/precipitaciones_2022}
-		\caption{Comportamiento de las precipitaciones por mes en 2022.}
-		\label{fig:precipitaciones2022}
-	\end{figure}
-	
-	
+
 	\newpage
-	En este contexto, resulta paradójico que los territorios que sufrieron los estragos e inundaciones causados por el tránsito de Ian, coinciden exactamente con aquellos que atravesaron una aguda sequía. Este evento plantea la cuestión de si los fenómenos naturales que han acontecido en Cuba, generando desde intensas precipitaciones hasta desbordamientos, suministran la cantidad necesaria de agua para contrarrestar esta sequía.\\
-	
-	Se ha documentado que las sequías más severas de este siglo tuvieron lugar durante períodos específicos, es decir, de 2003-2005, de 2009-2010 y de 2014-2015. Asimismo, durante estos períodos, diversas provincias sufrieron el impacto de intensos ciclones, que desencadenaron inundaciones de gran escala y desastres de notable magnitud.\cite{webpage3}
- 
-	
-	\begin{itemize}
-		\item\textbf{Período 2003-2005:}
-	\end{itemize}
-	
-	\begin{figure}[H]
+    Dada su posición geográfica, el archipiélago cubano está situado en una zona climática donde normalmente llueve cada año en el verano. Durante el invierno, los frentes fríos pueden venir acompañados de abundantes precipitaciones, a lo que se añaden las tormentas y los ciclones pluviosos.
+    \par\vspace{4mm}
+    Sin embargo, con el incremento de la población, ocurre el aumento exponencial del consumo de agua, así como la contaminación de algunas fuentes. Esto en Cuba contribuye a que la disponibilidad de agua por habitantes sea crítica. Por eso, durante varios meses o años las precipitaciones son escasas y se mantienen por debajo de los promedios históricos, y no ocurren huracanes o tormentas pluviales,siendo ahí cuando se presentá la sequía.
+    \par\vspace{4mm}
+    En Cuba tenemos reservas de agua potable en los ríos, en las lagunas, en los pantanos y en el subsuelo. Pero esas reservas se alimentan de las lluvias de verano y de las que acompañan los huracanes, cuya escasez o ausencia puede conducir a la sequía.
+    \begin{figure}
 		\centering
-		\includegraphics[width=0.9\linewidth]{./Report/images/gráfica_ismet}
-		\caption{Tabla del ISMET}
-		\label{fig:graficaismet}
+		\includegraphics[width=0.7\linewidth]{images/10.png}
+		\caption{Mapa de Cuba según la ubicación de las reservas acuíferas}
 	\end{figure}
-	
-	En el período de 2003 a 2005 se registraron tres tormentas tropicales, una de categoría "3", y las otras dos de categoría "4", conforme a la escala Saffir-Simpson. Estos eventos climáticos provocaron inundaciones en varias provincias, entre las que se incluyen Santiago de Cuba, Matanzas y la Isla de la Juventud.\cite{webpage4}
-	
-	
-	\begin{figure}[H]
+	\newpage
+    El déficit de precipitaciones y sus acumulados se prolongan de mes en mes, de año en año, hasta que inevitablemente comenzamos a padecer de sus efectos, siendo los principales años en estas últimas tres décadas los que más lo sufrieron:  2000,2004, 2009, 2015 y 2021, todos con acumulados anuales por debajo de los 12000 mm. En 2004 ocurrió la más severa sequía de los últimos 100 años. Especialmente en esta fecha, ya se venía acumulando el déficit; cada vez llovía menos. Siendo en ese mismo año, apenas en dos de sus meses que tuvieron acumulados por encima de la media.
+	\par\vspace{2pt}
+	\begin{figure}
 		\centering
-		\includegraphics[width=0.7\linewidth]{./Report/images/precipitaciones_2004}
-		\caption{Comportamiento de las precipitaciones en 2004.}
-		\label{fig:precipitaciones2004}
+		\includegraphics[width=0.8\linewidth]{images/1.png}
+		\caption{Gráfico de cómo se comportaron los niveles de precipitación anuales.}
 	\end{figure}
-	
-	
-	\begin{figure}[H]
+	\begin{figure}
 		\centering
-		\includegraphics[width=0.7\linewidth]{./Report/images/precipitaciones_2005}
-		\caption{Comportamiento de las precipitaciones en 2005.}
-		\label{fig:precipitaciones2005}
+		\includegraphics[width=0.7\linewidth]{images/2.png}
+		\caption{Gráfico de cómo se comportaron los niveles de precipitación en el año 2004.}
 	\end{figure}
+	\newpage
+	\section{A quienes afecta la sequía}
 	
-	Durante ese mismo lapso de tiempo, se presenció  una de las sequías más intensas  documentadas en los los últimos 50 años.\cite{webpage5}
-	
-	
+    En los últimos años, los incrementos de los episodios de sequía han traído consecuencias para los seres humanos, la agricultura y la sociedad, entre las que encontramos:
+    \par\vspace{4mm}
+    1. Agricultores y ganaderos: La falta de lluvias reduce la disponibilidad de agua para regar cultivos y para el consumo de los animales, lo que puede llevar a la pérdida de cosechas y a la escasez de forraje para el ganado.
+    \par\vspace{4mm}
+    2. Comunidades rurales: Aquellas que dependen de fuentes de agua locales para el consumo humano y actividades agrícolas pueden enfrentar escasez de agua potable y riego, lo que afecta la salud, la producción de alimentos y la economía local.
+    \par\vspace{4mm}
+    3. Consumidores: La sequía puede llevar a la escasez de alimentos y a un aumento en los precios de los productos agrícolas, lo que impacta en la seguridad alimentaria y en los bolsillos de las personas.
+    \par\vspace{4mm}
+    4. Industrias: La falta de agua puede afectar a sectores como la producción de energía, la manufactura, la minería y el turismo, entre otros.
+    \par\vspace{4mm}
+    5. Medio ambiente: La sequía puede provocar la pérdida de hábitats naturales, la disminución de recursos hídricos y afectar a la flora y fauna locales, así como la desertificación y la erosión.
+    \par\vspace{4mm}
+    6. Salud pública: La escasez de agua puede llevar a problemas de higiene, saneamiento y salud, así como a la propagación de enfermedades relacionadas con el agua.
+    \par\vspace{4mm}
+    La sequía es inevitable, así que el único modo de reducir sus efectos negativos es prepararnos con anticipación, tomando medidas inteligentes mucho antes de que se presente. Sobre todo, cuando sabemos que a consecuencia del Cambio Climático hay una tendencia a la reducción de las precipitaciones y un recrudecimiento de los períodos de sequía, que se presentan cada vez con mayor frecuencia. A continuacion se encuentran algunos ejemplos de medidas que se pueden tomar.
 	\begin{figure}[H]
 		\centering
-		\includegraphics[width=0.8\linewidth]{./Report/images/tabla_peligro_sequía}
-		\caption{Tabla de peligro de sequía.}
-		\label{fig:tablapeligrosequia}
+		\includegraphics[width=0.8\linewidth]{./images/6}
 	\end{figure}
-	
-	\begin{itemize}
-		\item\textbf{Período 2009-2010:}
-	\end{itemize}
-	
-	En el año 2009, Cuba experimentó una temporada ciclónica muy inactiva, con escasa presencia de fenómenos naturales. En contraste, en el 2010, la "Depresión Tropical Paula", azotó al país, generando abundantes precipitaciones en la región central. Estas lluvias resultaron favorables para dicha región, ya que contribuyeron a aliviar los efectos de la sequía, al menos durante ese mes y en esa área específica.\cite{webpage6}\cite{webpage7}
-	
 	\begin{figure}[H]
 		\centering
-		\includegraphics[width=0.6\linewidth]{./Report/images/precipitaciones_2010}
-		\caption{Comportamiento de las precipitaciones en el 2010.}
-		\label{fig:precipitaciones2010}
-	\end{figure}
-	
-	
-	\begin{figure}[H]
-		\centering
-		\includegraphics[width=0.7\linewidth]{./Report/images/mapa}
-		\caption{Mapa de Cuba de precipitación de octubre del 2010}
-		\label{fig:mapa}
-	\end{figure}
-	
-	\begin{itemize}
-		\item \textbf{Período 2014-2015:}
-	\end{itemize}
-	
-	El año 2014 mostró un comportamiento similar al año 2009. Sin embargo, en 2015, el huracán "Joaquín", a pesar de no atravesar directamente la Isla, afectó a varias provincias, desde Ciego de Ávila hasta Guantánamo. Este fenómeno metereológico desencadenó intensas lluvias, tormentas eléctricas, marejadas e inundaciones costeras en los primeros días de octubre. Estas precipitaciones jugaron un papel esencial en la  mitigación de los efectos de la sequía en dichos territorios.\cite{webpage6}\cite{webpage8}
-	
-	\begin{figure}[H]
-		\centering
-		\includegraphics[width=0.7\linewidth]{./Report/images/mapa_octubre_2015}
-		\caption{Mapa de Cuba de precipitación de octubre del 2015.}
-		\label{fig:mapaoctubre2015}
-	\end{figure}
-	
-	En resumen, la interacción entre los huracanes, las inundaciones y los períodos de sequía en Cuba representa desafíos considerables para la gestión del agua y la adaptación al cambio climático. A pesar de las fuertes lluvias asociadas a los huracanes, las provincias afectadas por estos eventos continúan sufriendo sequías, lo que destaca la complejidad de los impactos climáticos en la disponibilidad de agua. Además, la necesidad de estrategias sostenibles para la gestión de los recursos hídricos y la adaptación a la variabilidad climática se hace cada vez más urgente. Al analizar sucesos pasados y comprender sus repercusiones, se pueden obtener lecciones valiosas para enfrentar los futuros desafíos climáticos y garantizar la seguridad hídrica en Cuba. Es primordial recordar la importancia de cuidar nuestro planeta, nuestra tierra, y contribuir a su preservación de todas las formas posibles. ¡Conserva el agua!
-	
-	
-	\begin{figure}[H]
-		\centering
-		\includegraphics[width=0.4\linewidth]{./Report/images/agua}
-		\label{fig:agua}
+		\includegraphics[width=0.8\linewidth]{./images/7}
 	\end{figure}
 	
 	
 	\newpage
 	\begin{thebibliography}{8}
 		\bibitem{webpage1} 
-		\url{chttps://www.unicef.org/cuba/huracan-ian-cuba}
+		\url{https://www.droughtmanagement.info/literature/UNW-DPC_NDMP_Country_Report_Cuba_2013.pdf}
 		
 		\bibitem{webpage2}
-		\url{http://www.insmet.cu/asp/genesis.asp?TB0=PLANTILLAS&TB1=sqCLIMA&TB2=/clima/Sequia/SQOCTUBRE2015.HTM&TB3=2015}
+		\url{https://agriplasticscommunity.com/es/impacto-de-la-sequia-en-la-agricultura-consecuencias-y-soluciones/}
 		
 		\bibitem{webpage3}
-		\url{https://periodismodebarrio.org/2023/11/las-sequias-en-cuba-explicadas/amp/}
+		\url{https://rotoplas.com.ar/agroindustria/como-afecta-la-sequia-a-los-cultivos-y-como-evitarlo/}
 		
 		\bibitem{webpage4}
-		\url{https://rcm.insmet.cu/index.php/rcm/article/view/493/768}
-		
-		\bibitem{webpage5}
-		\url{http://rcm.insmet.cu/index.php/rcm/article/download/186/127/0
-			http://rcm.insmet.cu/index.php/rcm/article/download/186/127/0}
-		
-		\bibitem{webpage6}
-		\url{http://www.insmet.cu/asp/genesis.asp?TB0=PLANTILLAS&TB1=TEMPORADA&TB2=/Temporadas/temporada2020.html}
-		
-		\bibitem{webpage7}
-		\url{http://www.cubadebate.cu/temas/medio-ambiente-temas/2010/11/30/termina-hoy-la-activa-temporada-ciclonica-del-2010/amp/}
-		
-		\bibitem{webpage8}
-		\url{http://www.cubadebate.cu/noticias/2015/10/01/nota-informativa-no-1-del-estado-mayor-nacional-de-la-defensa-civil-sobre-el-huracan-joaquin/amp/}
+		\url{http://www.redciencia.cu/uploads/protegete/2018_Folleto9_sequia.pdf}
 		
 	\end{thebibliography}
 	
