fixing up route

--- a/Report/report.tex
+++ b/Report/report.tex
@@ -14,7 +14,7 @@
 	\vspace*{1cm}
 	\begin{figure}
 		\centering
-		\includegraphics[width=0.3\linewidth]{images/logo}
+		\includegraphics[width=0.3\linewidth]{./Report/images/logo}
 		\label{fig:logo}
 	\end{figure}
 	
@@ -48,7 +48,7 @@
     \par\vspace{4mm}
 	\begin{figure}[H]
 		\centering
-		\includegraphics[width=0.7\linewidth]{./images/4.png}
+		\includegraphics[width=0.7\linewidth]{./Report/images/4.png}
 		\label{fig:ian}
 	\end{figure}
 	\par\vspace{4mm}
@@ -75,7 +75,7 @@
 	\section{Sequía en Cuba}
     \begin{figure}
 		\centering
-		\includegraphics[width=0.7\linewidth]{images/9.jpg}
+		\includegraphics[width=0.7\linewidth]{./Report/images/9.jpg}
 	\end{figure}
 
 	\newpage
@@ -86,7 +86,7 @@
     En Cuba tenemos reservas de agua potable en los ríos, en las lagunas, en los pantanos y en el subsuelo. Pero esas reservas se alimentan de las lluvias de verano y de las que acompañan los huracanes, cuya escasez o ausencia puede conducir a la sequía.
     \begin{figure}
 		\centering
-		\includegraphics[width=0.7\linewidth]{images/10.png}
+		\includegraphics[width=0.7\linewidth]{./Report/images/10.png}
 		\caption{Mapa de Cuba según la ubicación de las reservas acuíferas}
 	\end{figure}
 	\newpage
@@ -94,12 +94,12 @@
 	\par\vspace{2pt}
 	\begin{figure}
 		\centering
-		\includegraphics[width=0.8\linewidth]{images/1.png}
+		\includegraphics[width=0.8\linewidth]{./Report/images/1.png}
 		\caption{Gráfico de cómo se comportaron los niveles de precipitación anuales.}
 	\end{figure}
 	\begin{figure}
 		\centering
-		\includegraphics[width=0.7\linewidth]{images/2.png}
+		\includegraphics[width=0.7\linewidth]{./Report/images/2.png}
 		\caption{Gráfico de cómo se comportaron los niveles de precipitación en el año 2004.}
 	\end{figure}
 	\newpage
@@ -122,11 +122,11 @@
     La sequía es inevitable, así que el único modo de reducir sus efectos negativos es prepararnos con anticipación, tomando medidas inteligentes mucho antes de que se presente. Sobre todo, cuando sabemos que a consecuencia del Cambio Climático hay una tendencia a la reducción de las precipitaciones y un recrudecimiento de los períodos de sequía, que se presentan cada vez con mayor frecuencia. A continuacion se encuentran algunos ejemplos de medidas que se pueden tomar.
 	\begin{figure}[H]
 		\centering
-		\includegraphics[width=0.8\linewidth]{./images/6}
+		\includegraphics[width=0.8\linewidth]{./Report/images/6}
 	\end{figure}
 	\begin{figure}[H]
 		\centering
-		\includegraphics[width=0.8\linewidth]{./images/7}
+		\includegraphics[width=0.8\linewidth]{./Report/images/7}
 	\end{figure}
 	
 	
